--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,9 @@
 title: Product Radio
 description: Tuning into AI & Product Strategy
 theme: minima
+
+header_pages:
+  - index.md
+  - about.md
+  - broadcasts.md
+  - agentic-ai.md
